--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,3 +11,6 @@ tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4"] }
 chrono = "0.4"
+serde = "1.0.136"
+serde_derive = "1.0.136"
+serde_json = "1.0.79"
