--- a/server/sql/schemas/liquibase.properties
+++ b/server/sql/schemas/liquibase.properties
@@ -3,3 +3,5 @@ liquibase.command.url=jdbc:postgresql://localhost:5432/thermostat
 liquibase.command.username: postgres
 liquibase.command.password: postgres
 classpath: /opt/liquibase/lib/postgresql-42.3.2.jar
+
+liquibase.hub.mode=off
