--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,3 +12,5 @@ chrono = { version = "0.4.19", features = ["serde"] }
 serde = "1.0.136"
 serde_derive = "1.0.136"
 serde_json = "1.0.79"
+log = "0.4.0"
+env_logger = "0.9.3"
