--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,6 +9,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@vueform/slider": "^2.1.5",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
