--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueform/slider": "^2.1.5",
+    "@vuepic/vue-datepicker": "^7.4.1",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
