--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,21 +9,22 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@vueform/slider": "^2.1.5",
+    "@vueform/multiselect": "^2.6.6",
+    "@vueform/slider": "^2.1.10",
     "@vuepic/vue-datepicker": "^7.4.1",
-    "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue": "^3.4.15",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/node": "^16.11.68",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "@vue/tsconfig": "^0.1.3",
-    "axios": "^1.1.3",
+    "@types/node": "^20.11.7",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/tsconfig": "^0.5.1",
+    "axios": "^1.6.7",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.56.1",
-    "typescript": "~4.7.4",
-    "vite": "^3.1.8",
-    "vue-tsc": "^1.0.8",
+    "sass": "^1.70.0",
+    "typescript": "~5.3.3",
+    "vite": "^5.0.12",
+    "vue-tsc": "^1.8.27",
     "vuex": "^4.1.0"
   }
 }
